minor css spacing fix

--- a/src/less/search.less
+++ b/src/less/search.less
@@ -246,6 +246,9 @@
         &__results-item {
             line-height: 2em;
         }
+        &__notice {
+            padding: @indent__s @indent__xl + @indent__l @indent__l;
+        }
 
         &__history {
             padding: 0 @indent__l+@indent__xl @indent__l;
